# PI_solutions

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  generate_testcases.py
.github/workflows/: codeql.yml  flawfinder.yml
src/: calki_tmpl.c  double_linked_array_list_templ.c  ht_template.c  ids_template.c  impl_mac_template.c  mac_1_template.c  mac_2_template.c  rel_template.c  sorting_templ.c  statystyka_dodat.c  statystyka_tmpl.c  str_template.c  vec-sol.c  vect_template.c  zadanie11_1_template.c  zadanie2_1.c  zadanie2_2.c  zadanie2_3.c
template/: vec-template.c
test_files/: Tekst_1b.txt  Tekst_C.txt  case_8_2.txt  case_8_3.txt  case_8_4.txt
tester/: tester.cpp  tester.h
tests/: calki_6_1_1.cpp  calki_6_1_2.cpp  calki_6_2_1.cpp  calki_6_3_2.cpp  calki_6_4_1.cpp  calki_6_4_2.cpp  calki_prostokaty.cpp  double_linked_list_1.cpp  double_linked_list_2.cpp  double_linked_list_3.cpp  double_linked_list_4.cpp  double_linked_list_5.cpp  hash_table_test1.cpp  hash_table_test2.cpp  hash_table_test3.cpp  hash_table_test4.cpp  hash_table_test5.cpp  hash_table_test6.cpp  ids_example_code_test.cpp  ids_example_include_test.cpp  ids_tricky_1.cpp  ids_tricky_2.cpp  ids_tricky_3.cpp  ids_tricky_4.cpp  ids_tricky_5.cpp  ids_tricky_6.cpp  ids_tricky_7.cpp  ids_tricky_8.cpp  ids_tricky_9.cpp  ids_tricky_comment_test.cpp  impl_mac_1_test.cpp  impl_mac_2_test.cpp  impl_mac_3_test.cpp  impl_mac_4_test.cpp  impl_mac_5_test.cpp  mac_desc.cpp  mac_inv_desc.cpp  rel_zad1.cpp  rel_zad2.cpp  rel_zad3.cpp  (+40 more)
